--- a/MAKET_DIV.html
+++ b/MAKET_DIV.html
@@ -28,7 +28,7 @@
 
         }
         .content{
-            background-color: antiquewhite;
+            background-color: rgb(248, 236, 220);
             margin-top: -21.5px;
             margin-left: 15%;
             height: calc(100vh - 184px);
